--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -43,7 +43,7 @@
         android:id="@+id/buttonImportDrive"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Import Photos from Google Drive"
+        android:text="Import Photos"
         android:layout_below="@id/buttonDeleteFaculty"
         android:layout_marginTop="8dp"
         android:backgroundTint="#43A047"
